syntax = "proto3";

package common;

message Persisted {
    uint32 QOS         = 1;
	string Topic       = 2;
	bytes  Payload     = 3;
	string ClientID    = 4;
}

message Transferred {
	Persisted Persisted          = 1;
	string    FunctionName       = 2;
	string    FunctionInvokeID   = 3;
	string    FunctionInstanceID = 4;
}

//  protoc --go_out=. --python_out=. *.proto
